change markers for array markers; transform objects positions from subt to uav22/os_lidar position

--- a/config/objects.yml
+++ b/config/objects.yml
@@ -1,3 +1,29 @@
 cube1: [30.53, 3.57, 0.25]
 survivor1: [15.73, -3.56, 1.14]
 drill1: [17.0, 4.35, 0.91]
+backpack1: [7.22, 7.45, 0.94]
+rope1 : [11.9, 6.65, 2.21]
+phone1 : [10.5, 2.45, 0.69]
+helmet1 : [8.3, -9.7, 1.57]
+vent1 : [-5.54, -13.7, 1.8]
+phone2 : [12.44, -2.02, 0.17]
+extinguisher1 : [21.0, 0.26, 0.54]
+survivor2 : [27.45, 8.97, 1.15]
+phone3: [19.2, 5.75, 1.84]
+
+
+positions: [
+            30.53, 3.57, 0.25,    # cube1
+            15.73, -3.56, 1.14,   # survivor1
+            #17.0, 4.35, 0.91,     # drill 1
+            #7.22, 7.45, 0.94,     # backpack1
+            #10.5, 2.45, 0.69,     # phone1
+            #8.3, -9.7, 1.57,      # helmet1
+            #-5.54, -13.7, 1.8,    # vent1
+            #12.44, -2.02, 0.17,   # phone2
+            #21.0, 0.26, 0.54,     # extinguisher1
+            27.45, 8.97, 1.15,    # survivor2
+            #19.2, 5.75, 1.84      # phone3
+
+            ] 
+number: 3
