--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <depend>roscpp</depend>
+  <depend>geometry_msgs</depend>
   <depend>nodelet</depend>
   <depend>std_msgs</depend>
   <depend>mrs_lib</depend>
