--- a/package.xml
+++ b/package.xml
@@ -16,8 +16,13 @@
   <depend>geometry_msgs</depend>
   <depend>nodelet</depend>
   <depend>std_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>mrs_lib</depend>
   <depend>cv_bridge</depend>
+  <depend>tf2_rosrun</depend>
+  <depend>tf2_ros</depend>
+  <depend>swarm_gazebo_resources</depend>
+  <depend>baloon_simulation</depend>
 
   <export>
     <!-- The plugins.xml file defines nodelet as a plugin -->
