--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
 
-  <name>mrs_byci_skala_detection</name>
+  <name>mrs_detection</name>
   <version>1.0.0</version>
   <description>more_desctription</description>
 
