--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,7 @@
 
   <depend>roscpp</depend>
   <depend>geometry_msgs</depend>
+  <depend>sensor_msgs</depend>
   <depend>nodelet</depend>
   <depend>std_msgs</depend>
   <depend>nav_msgs</depend>
