--- a/tmux_scripts/session.yml
+++ b/tmux_scripts/session.yml
@@ -1,7 +1,7 @@
 name: simulation
 root: ./
 startup_window: status
-pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f450; export WORLD_NAME=simulation; export SENSORS="garmin_down"; export ODOMETRY_TYPE="rtk"
+pre_window: export UAV_NAME=uav1; export RUN_TYPE=simulation; export UAV_TYPE=f450; export WORLD_NAME=simulation_baylands; export SENSORS="garmin_down"; export ODOMETRY_TYPE="rtk"
 windows:
   - roscore:
       layout: tiled
@@ -11,7 +11,7 @@ windows:
       layout: tiled
       panes:
        #        - waitForRos; roslaunch mrs_simulation simulation.launch gui:=true world_file:='$(find swarm_gazebo_resources)/worlds/forest_rumburk_large.world'
-        - waitForRos; roslaunch mrs_simulation simulation.launch gui:=false world_file:='$(find detection_gazebo_resources)/worlds/baylands.world'
+        - waitForRos; roslaunch mrs_simulation simulation.launch gui:=true world_file:='$(find detection_gazebo_resources)/worlds/baylands.world'
        #        - waitForRos; roslaunch mrs_simulation simulation.launch gui:=true world_file:='/home/mrs/Downloads/baylands.world'
         - waitForOdometry; gz camera -c gzclient_camera -f uav1; history -s gz camera -c gzclient_camera -f uav1
   - status:
